# Corvine

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/root/graph/elements/: element.hpp
include/root/math/: corvinemath.hpp  math.hpp
include/root/util/: linked_list.hpp  list.hpp
src/: main.cpp
src/root/graph/: graph.cpp
src/root/graph/elements/: element.cpp  expression.cpp  folder.cpp
src/root/math/: corvine_math.cpp  corvinemath.cpp  math.cpp
src/root/math/lambda/: lambda_calculus.cpp
src/root/util/: linked_list.cpp
tests/: CMakeLists.txt  lambda_calculus_test.cpp  linked_list_test.cpp
